[package]
name = "nostos-redis"
version = "0.1.0"
edition = "2021"
description = "Async Redis extension for Nostos - non-blocking Tokio-based Redis client"
repository = "https://github.com/pegesund/nostos-redis"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
nostos-extension = { path = "../nostos_duplicate/crates/extension" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "streams"] }
tokio = { version = "1", features = ["rt", "sync", "time"] }
futures = "0.3"
